# Developmental-Networks

./: .gitignore  README.md
CCILCA/: CMakeLists.txt
CCILCA/examples/: main.cc
CCILCA/include/: CCILCA.h
CCILCA/source/: CCILCA.cc
CCIPCA/: CMakeLists.txt
CCIPCA/examples/: main.cc
CCIPCA/include/: CCIPCA.h
CCIPCA/source/: CCIPCA.cc
IHDR/: CMakeLists.txt
IHDR/data/: letter.tes  letter.tra
IHDR/examples/: main.cc
IHDR/include/: IHDR.h
IHDR/lib/win/debug/: IHDR.lib
MILN/: CMakeLists.txt
MILN/examples/: main.cc
MILN/source/: ClassifierCortex.cc  ClassifierCortex.h  Neuron.cc  Neuron.h  RectLayer.cc  RectLayer.h
